# Parsing_RialCom

./: README.md  main.py  pyproject.toml
parsing_rialcom/: DataExtractor.py  ExcelTable.py  InternetTariff.py  WebParser.py  main.py
samples/: tariffs.xlsx
