[tool.poetry]
name = "parsing-rialcom"
version = "0.1.0"
description = "Parsing Internet tariffs from the website of the company RiallCom. They are presented in a convenient format in an Excel file."
authors = ["Eolmer <dan4ik0408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
